# Personal-Ecosystem

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: config.py  main.py
src/cogs/: reminder.py  streak.py  todo.py
src/services/: db.py  reminder_service.py  streak_service.py  todo_service.py  todo_services.py
tests/: conftest.py
tests/cogs/: test_reminder_cog.py  test_streak_cog.py  test_todo_cog.py
tests/services/: test_reminder_service.py  test_streak_service.py  test_todo_service.py
