[project]
name = "personal-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "discord.py",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
